6595651: Focus transfers broken for applications embedding AWT across processes

Now we allow cross-process focus requests if focus is in embedder's process.

Reviewed-by: ant